cmake_minimum_required(VERSION 3.30.0)
project(FVMem VERSION 0.1.0 LANGUAGES C CXX)

set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(EXECUTABLE_OUTPUT_PATH_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/bin/release")
set(EXECUTABLE_OUTPUT_PATH_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/bin/debug")
set(BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/binBuild )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug) 

add_executable(${PROJECT_NAME} main.cpp)

set(CMAKE_CXX_STANDARD 20)
 
message(STATUS "Building Project ${CMAKE_PROJECT_NAME}") 

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE  "${CMAKE_CURRENT_SOURCE_DIR}/src") 

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src")    

include(CTest)   
enable_testing() 

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DFV_DEBUG")


#bset(CMAKE_BUILD_TYPE Debug)
include(CPack) 
 